Changed the css of popovers so that the dsl reference card, display scale popover and keyboard settings popover are no longer blurry Story: 691

--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -20,6 +20,12 @@
     -fx-padding: 30px;
 }
 
+.popover .border {
+    -fx-stroke-width: 1.0;
+    -fx-fill: rgba(255.0,255.0,255.0, .95);
+    -fx-effect: dropshadow(gaussian, rgba(0,0,0,.2), 10.0, 0.5, 2.0, 2.0);
+}
+
 /*.menu-bar {
     -fx-background-color: #8e8e8e;
 }
